--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="18dp"
+        android:layout_margin="14dp"
         android:layout_gravity="center_vertical">
         <TextView
             android:layout_width="match_parent"
@@ -18,12 +18,19 @@
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="20sp"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/place_address"
             android:layout_marginTop="10dp"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="14sp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/place_location"
+            android:layout_marginTop="10dp"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="11sp"/>
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
