--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -29,8 +29,7 @@
         android:layout_height="60dp"
         android:layout_below="@+id/titleLayout"
         android:layout_centerInParent="true"
-        android:layout_marginTop="40sp"
-        android:background="@drawable/ic_clear_day" />
+        android:layout_marginTop="40sp" />
 
     <LinearLayout
         android:id="@+id/bodyLayout"
@@ -58,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
