--- a/app/src/main/res/layout/air_quality.xml
+++ b/app/src/main/res/layout/air_quality.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
+    android:layout_height="153.5dp"
     android:layout_margin="12dp"
     app:cardCornerRadius="6dp">
     <LinearLayout
@@ -39,7 +39,6 @@
                 app:circle_width="10dp"
                 app:max_progress="500"
                 app:start_angle="160"
-
                 app:total_angle="221" />
 
             <TextView
@@ -92,8 +91,108 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.3"
+            android:layout_marginTop="5dp"
             android:orientation="vertical">
-
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TableRow>
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="PM10"
+                        android:textStyle="bold"
+                        android:layout_marginStart="25dp"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/pm10"
+                        android:layout_weight="1.5" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="PM2.5"
+                        android:textStyle="bold"
+                        android:layout_marginStart="25dp"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/pm2.5"
+                        android:layout_weight="1.5" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="NO₂"
+                        android:textStyle="bold"
+                        android:layout_marginStart="25dp"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/no2"
+                        android:layout_weight="1.5" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="SO₂"
+                        android:textStyle="bold"
+                        android:layout_marginStart="25dp"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/so2"
+                        android:layout_weight="1.5" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="O₃"
+                        android:textStyle="bold"
+                        android:layout_marginStart="25dp"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/o3"
+                        android:layout_weight="1.5" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="CO"
+                        android:textStyle="bold"
+                        android:layout_marginStart="25dp"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/co"
+                        android:layout_weight="1.5" />
+                </TableRow>
+            </TableLayout>
         </LinearLayout>
     </LinearLayout>
 
