--- a/app/src/main/res/layout/weather_activity.xml
+++ b/app/src/main/res/layout/weather_activity.xml
@@ -16,6 +16,15 @@
             android:textSize="19dp"
             android:textStyle="bold"/>
         <include layout="@layout/air_quality"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp"
+            android:text="生活指数"
+            android:textSize="19dp"
+            android:textStyle="bold"/>
+        <include layout="@layout/life_index"/>
     </LinearLayout>
 
 </ScrollView>
