--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -12,8 +12,7 @@
     <FrameLayout
         android:id="@+id/actionBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/design_default_color_on_primary">
+        android:layout_height="60dp">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -24,7 +23,8 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:hint="@string/enter_the_address"
-            android:background="@drawable/search_bg"/>
+            android:textCursorDrawable="@drawable/color_cursor"
+            android:background="@null"/>
     </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
