--- a/app/src/main/res/layout/life_index_item.xml
+++ b/app/src/main/res/layout/life_index_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/life_index_item_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
         android:gravity="center_horizontal"
-        android:text="6:30"
+        android:textSize="14.5sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
