--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -8,8 +8,14 @@
     <FrameLayout
         android:id="@+id/titleLayout"
         android:layout_width="match_parent"
+        android:layout_marginTop="10sp"
         android:layout_height="70dp">
-
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/select_city_button"
+            android:background="@drawable/ic_baseline_more_horiz_24"
+            android:layout_margin="10dp"/>
         <TextView
             android:id="@+id/placeName"
             android:layout_width="wrap_content"
