--- a/app/src/main/res/layout/weather_activity.xml
+++ b/app/src/main/res/layout/weather_activity.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/drawerLayout">
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipeRefresh">
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -25,6 +33,30 @@
             android:textSize="19dp"
             android:textStyle="bold"/>
         <include layout="@layout/life_index"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp"
+            android:text="未来七日"
+            android:textSize="19dp"
+            android:textStyle="bold"/>
+        <include layout="@layout/seven_days_future_wea"/>
     </LinearLayout>
-
 </ScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/seethrough"
+        android:clickable="true"
+        android:focusable="true">
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/place_select_fragment"
+            android:layout_marginTop="25dp"
+            android:name="com.youknowweather.android.view.place.PlaceFragment"/>
+    </FrameLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
